# invoice-smart-rename

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
backend/: pyproject.toml  run_dev.py
backend/app/: __init__.py  config.py  main.py  schemas.py  storage.py
backend/app/services/: __init__.py  importer.py  naming.py  rename.py  settings_store.py
backend/app/services/ocr/: __init__.py  cloud.py  pipeline.py
backend/app/utils/: text.py
backend/tests/: test_naming.py
frontend/: index.html  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: client.ts  tauri.ts  types.ts
frontend/src/components/: InvoicePreviewPanel.vue
frontend/src/stores/: invoice.ts
frontend/src/utils/: naming.ts
scripts/: tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
