[package]
name = "invoice-smart-rename"
version = "0.1.0"
description = "Invoice smart rename desktop shell"
authors = ["myfox"]
edition = "2021"

[lib]
name = "invoice_smart_rename_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
